--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@types/react-router-dom": "^5.3.3",
+    "cox-postposition": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0"
