--- a/front/package.json
+++ b/front/package.json
@@ -15,10 +15,14 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-virtualized-auto-sizer": "^1.0.4",
+    "@types/react-window": "^1.8.8",
     "cox-postposition": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "react-virtualized-auto-sizer": "^1.0.22",
+    "react-window": "^1.8.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
