--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -25,8 +25,8 @@ jobs:
               run: |
                 python -m pip install --upgrade pip
                 pip install -r requirements.txt
-                export API_ENDPOINT={{ secrets.API_ENDPOINT }}
-                export API_KEY={{ secrets.API_KEY }}
+                export API_ENDPOINT=${{ secrets.API_ENDPOINT }}
+                export API_KEY=${{ secrets.API_KEY }}
                 python fetch.py
                 git config --global user.email "trulybright@yonsei.ac.kr"
                 git config --global user.name "TrulyBright"
