시간당 1회 실행

--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -9,7 +9,7 @@ on:
         branches:
             - main
     schedule:
-        - cron: 0 9,19 * * *
+        - cron: 0 * * * *
 
 jobs:
     update:
