--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -11,6 +11,9 @@ on:
     schedule:
         - cron: 0 * * * *
 
+permissions:
+    actions: write
+
 jobs:
     update:
         runs-on: ubuntu-latest
@@ -22,12 +25,19 @@ jobs:
               with:
                 python-version: '3.10'
             - name: fetch
+              env:
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
                 python -m pip install --upgrade pip
                 pip install -r requirements.txt
                 export API_ENDPOINT=${{ secrets.API_ENDPOINT }}
                 export API_KEY=${{ secrets.API_KEY }}
                 python fetch.py
+                if [[ git diff --quiet ]]; then
+                    echo "No changes"
+                    gh run cancel ${{ github.run_id }}
+                    gh run watch ${{ github.run_id }}
+                fi
                 git config --global user.email "trulybright@yonsei.ac.kr"
                 git config --global user.name "TrulyBright"
                 git add -A
