--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -1,4 +1,4 @@
-name: Update & Deploy
+name: Deploy
 
 on:
     push:
@@ -18,29 +18,6 @@ jobs:
             - uses: actions/checkout@v4
               with:
                 fetch-depth: 0
-            - uses: actions/setup-python@v5
-              with:
-                python-version: '3.10'
-            - name: fetch
-              env:
-                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              run: |
-                python -m pip install --upgrade pip
-                pip install -r requirements.txt
-                export API_ENDPOINT=${{ secrets.API_ENDPOINT }}
-                export API_KEY=${{ secrets.API_KEY }}
-                python fetch.py
-                if [[ $(git diff) ]]; then
-                  git config --global user.email "trulybright@yonsei.ac.kr"
-                  git config --global user.name "TrulyBright"
-                  git add -A
-                  git commit -m "update data"
-                  git push
-                else
-                    echo "No changes"
-                    gh run cancel ${{ github.run_id }}
-                    gh run watch ${{ github.run_id }}
-                fi
             - name: Deploy to the Azure SWA
               uses: Azure/static-web-apps-deploy@v1
               env:
