--- a/.github/workflows/UPDATE.yaml
+++ b/.github/workflows/UPDATE.yaml
@@ -42,6 +42,9 @@ jobs:
         if: ${{ needs.update-mma-data.outputs.diff == 'true' }}
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v4
+              with:
+                fetch-depth: 0
             - name: Verify
               run: |
                 diff=${{ needs.update-mma-data.outputs.diff }}
