--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -16,6 +16,9 @@ jobs:
             - uses: actions/checkout@v4
               with:
                 fetch-depth: 0
+            - uses: actions/setup-node@v4
+              with:
+                node-version: '20'
             - name: Deploy to the Azure SWA
               uses: Azure/static-web-apps-deploy@v1
               env:
