--- a/front/package.json
+++ b/front/package.json
@@ -2,6 +2,10 @@
   "name": "front",
   "private": true,
   "version": "0.0.0",
+  "engines": {
+    "node": ">=18",
+    "pnpm": ">=9"
+  },
   "type": "module",
   "scripts": {
     "dev": "vite",
