--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -17,8 +17,8 @@ jobs:
             - name: Deploy to the Azure SWA
               uses: Azure/static-web-apps-deploy@v1
               env:
-                PRE_BUILD_COMMAND: npm install -g pnpm
-                CUSTOM_BUILD_COMMAND: pnpm install && pnpm run build
+                PRE_BUILD_COMMAND: npm i -g pnpm
+                CUSTOM_BUILD_COMMAND: pnpm i && pnpm run build-with-data
               with:
                 azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_WHITE_RIVER_005A91700 }}
                 repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
