--- a/.github/workflows/UPDATE.yaml
+++ b/.github/workflows/UPDATE.yaml
@@ -3,58 +3,28 @@ on:
     schedule:
         - cron: 0 * * * *
 jobs:
-    update-mma-data:
+    Deploy-to-the-Azure-SWA:
         runs-on: ubuntu-latest
-        outputs:
-            diff: ${{ steps.fetch.outputs.diff }}
         steps:
             - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
+              with:
+                node-version: '20'
             - uses: actions/setup-python@v5
               with:
                 python-version: '3.10'
-            - name: fetch
-              id: fetch
-              env:
-                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              run: |
+            - run: |
                 python -m pip install --upgrade pip
                 pip install -r requirements.txt
                 export API_ENDPOINT=${{ secrets.API_ENDPOINT }}
                 export API_KEY=${{ secrets.API_KEY }}
+                export GITHUB_TOKEN=${{ secrets.GIST_ACCESS_TOKEN }}
+                export GIST_ID=${{ secrets.GIST_ID }}
                 python fetch.py
-                if [[ $(git diff) ]]; then
-                    echo update needed
-                    git config --global user.email "trulybright@yonsei.ac.kr"
-                    git config --global user.name "TrulyBright"
-                    git add -A
-                    git commit -m "update data"
-                    git push
-                    echo "diff=true" >> "$GITHUB_OUTPUT"
-                else
-                    echo "No update needed"
-                    echo "diff=false" >> "$GITHUB_OUTPUT"                  
-                fi
-
-    Deploy-to-the-Azure-SWA:
-        needs: update-mma-data
-        if: ${{ needs.update-mma-data.outputs.diff == 'true' }}
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - name: Verify
-              run: |
-                diff=${{ needs.update-mma-data.outputs.diff }}
-                echo "diff: $diff"
-                if [[ $diff == 'true' ]]; then
-                    echo "Deploying..."
-                else
-                    echo "No changes to deploy."
-                    exit 1
-                fi
             - uses: Azure/static-web-apps-deploy@v1
               env:
-                PRE_BUILD_COMMAND: npm install -g pnpm
-                CUSTOM_BUILD_COMMAND: pnpm install && pnpm run build
+                PRE_BUILD_COMMAND: npm i -g pnpm
+                CUSTOM_BUILD_COMMAND: pnpm i && pnpm run build-with-data
               with:
                 azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_WHITE_RIVER_005A91700 }}
                 repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
