--- a/.github/workflows/UPDATE.yaml
+++ b/.github/workflows/UPDATE.yaml
@@ -2,6 +2,13 @@ name: Update
 on:
     schedule:
         - cron: 0 * * * *
+    push:
+        branches:
+            - master
+    pull_request:
+        types: [opened, synchronize, reopened, closed]
+        branches:
+            - main
 jobs:
     Deploy-to-the-Azure-SWA:
         runs-on: ubuntu-latest
