--- a/.github/workflows/UPDATE.yaml
+++ b/.github/workflows/UPDATE.yaml
@@ -24,11 +24,12 @@ jobs:
                 node-version: '20'
             - uses: actions/setup-python@v5
               with:
-                python-version: '3.10'
+                python-version: '3.12'
             - run: |
                 python -m pip install --upgrade pip
                 pip install -r requirements.txt
-                python fetch.py
+                python fetch.job.py
+                python fetch.company.py
             - uses: Azure/static-web-apps-deploy@v1
               env:
                 PRE_BUILD_COMMAND: npm i -g pnpm
